<resources>
    <string name="app_name">Android Samples</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_clear_database">Clear database</string>

    <string name="menu_home">Home</string>
    <string name="menu_add_note">Add note</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_background_services">Background services</string>

    <string name="recipient_label_text">To</string>
    <string name="sender_label_text">From</string>
    <string name="note_label_text">Note</string>
    <string name="add_note_submit_button_text">Submit note</string>
    <string name="update_note_submit_button_text">Update note</string>
    <string name="cleared_message">All your data is gone forever.</string>
    <string name="recipient_text_format">To: %1$s</string>
    <string name="sender_text_format">From: %1$s</string>
    <string name="gift_text_format">Gifted: %1$s worth ₹%2$s</string>
    <string name="edit_action_text">Edit</string>
    <string name="delete_action_text">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready_to_start">Ready to start</string>
    <string name="start_task">Start task</string>
    <string name="broadcast_receiver">Broadcast receiver</string>
    <string name="async_task">Async task</string>
    <string name="notificatons">Notificatons</string>
    <string name="alarm_manager">Alarm manager</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">WiFi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_scheduler">Job Scheduler</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline: </string>
    <string name="schedule_async_task_job">Schedule async task job</string>
    <string name="settings">Settings</string>
    <string name="first_name">First Name : </string>
    <string name="last_name">Last Name : </string>
    <string name="current_class">Class : </string>
    <string name="_button_text">Edit</string>
    <string name="edit_details_button">Add/Edit details</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_class">Enter class</string>
    <string name="add_student">Add student</string>
    <string name="student_id">Student ID: </string>
    <string name="view_details">View details</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="add_student_details">Add student details</string>
    <string name="available_courses">Available Courses</string>
    <string name="click_to_start">Click to start</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>

    <!-- Custom view-->
    <string name="fan_off">off</string>
    <string name="fan_low">1</string>
    <string name="fan_medium">2</string>
    <string name="fan_high">3</string>
    <string name="change">Change</string>
    <string name="reset">Reset</string>
    <string name="student_management">Student Management</string>
    <string name="search_repositories">Search repositories</string>
    <string name="custom_view">Custom view</string>
    <string name="coroutine_sample">Coroutine Sample</string>
    <string name="gift_list">Gift list</string>
</resources>