<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.backgroundservices.jobscheduler.JobSchedulerFragment">

    <TextView
        android:id="@+id/networkTypeSubtitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_type_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/networkOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/networkTypeSubtitleTextView">

        <RadioButton
            android:id="@+id/noNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:checked="true"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/anyNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/any" />

        <RadioButton
            android:id="@+id/wifiNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/wifi" />

    </RadioGroup>

    <Button
        android:id="@+id/scheduleJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/schedule_job"
        app:layout_constraintEnd_toStartOf="@+id/cancelJobButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkOptions" />

    <Button
        android:id="@+id/cancelJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/cancel_jobs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scheduleJobButton"
        app:layout_constraintTop_toBottomOf="@+id/networkOptions" />


</androidx.constraintlayout.widget.ConstraintLayout>