<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/studentIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editButton" />

    <TextView
        android:id="@+id/studentIdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameValue"
        app:layout_constraintStart_toEndOf="@+id/studentIdLabel"
        app:layout_constraintTop_toTopOf="@id/editButton"
        tools:text="1" />


    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentIdLabel" />

    <TextView
        android:id="@+id/firstNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameValue"
        app:layout_constraintStart_toEndOf="@+id/firstNameLabel"
        app:layout_constraintTop_toBottomOf="@id/studentIdValue"
        tools:text="Rahul" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/classLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameLabel" />

    <TextView
        android:id="@+id/lastNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/classValue"
        app:layout_constraintStart_toEndOf="@+id/lastNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/firstNameValue"
        tools:text="Kanojia" />

    <TextView
        android:id="@+id/classLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_class"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel" />

    <TextView
        android:id="@+id/classValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsButton"
        app:layout_constraintStart_toEndOf="@+id/classLabel"
        app:layout_constraintTop_toBottomOf="@+id/lastNameValue"
        tools:text="12" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editDetailsButton"
        app:layout_constraintBottom_toTopOf="@+id/editDetailsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_details_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editButton" />

</androidx.constraintlayout.widget.ConstraintLayout>